// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category renders correctly when there are courses 1`] = `
<div>
  <div>
    <Categorystyles__CategoryTitleHolder>
      <Categorystyles__CategoryIcon />
      <Categorystyles__CategoryTitle>
        Test
      </Categorystyles__CategoryTitle>
      <Categorystyles__ViewAll>
        <Categorystyles__ViewAllLink
          href="/training/categories/1"
          title="Test"
        >
          <FormattedMessage
            id="viewAllCourses"
            values={Object {}}
          />
        </Categorystyles__ViewAllLink>
      </Categorystyles__ViewAll>
    </Categorystyles__CategoryTitleHolder>
    <Categorystyles__List>
      <CategoryCourse
        course={
          Object {
            "id": 1,
          }
        }
        key="1"
      />
    </Categorystyles__List>
  </div>
</div>
`;

exports[`Category renders correctly when there are sub categories 1`] = `
<div>
  <div>
    <Categorystyles__CategoryTitleHolder>
      <Categorystyles__CategoryIcon />
      <Categorystyles__CategoryTitle>
        Test
      </Categorystyles__CategoryTitle>
      <Categorystyles__ViewAll>
        <Categorystyles__ViewAllLink
          href="/training/categories/1"
          title="Test"
        >
          <FormattedMessage
            id="viewAllCourses"
            values={Object {}}
          />
        </Categorystyles__ViewAllLink>
      </Categorystyles__ViewAll>
    </Categorystyles__CategoryTitleHolder>
    <Categorystyles__List>
      <SubCategory
        category={
          Object {
            "id": 1,
          }
        }
        key="1"
      />
    </Categorystyles__List>
  </div>
</div>
`;
